--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-json-view": "^1.21.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
